[workspace]
members = ["crates/e2e", "crates/e2e-macro"]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Igor Aleksanov <popzxc@yandex.ru>"]
homepage = "https://github.com/popzxc/e2e"
repository = "https://github.com/popzxc/e2e"
license = "MIT OR Apache-2.0"
keywords = ["test", "framework", "e2e"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = "1"
console = "0.15.0"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"

# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# Local deps
e2e-macro = { version = "0.1.0", path = "crates/e2e-macro" }
